# test_Qortex

./: .coveragerc  .dockerignore  .env.sample  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  nginx.conf  pyproject.toml
catalogs/: admin.py  apps.py  models.py  pagination.py  serializers.py  urls.py  views.py
catalogs/management/commands/: test_data.py
catalogs/tests/: tests_api.py  tests_models.py
config/: settings.py  urls.py
fixture/: fixture.py
